full-moon/tests/cases/fail/parser/un-op-2/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/un-op-2
---
error[ast]: unexpected token `not`. not (expected an expression after not)
  ┌─ source.lua:1:8
  │
1 │ return not end
  │        ^^^

error[ast]: unexpected token `end`. end (unexpected token, this needs to be a statement)
  ┌─ source.lua:1:12
  │
1 │ return not end
  │            ^^^


